--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@nuxt/eslint": "1.4.1",
+    "@nuxtjs/seo": "^3.1.0",
     "@nuxtjs/tailwindcss": "^7.0.0-beta.0",
+    "@vite-pwa/nuxt": "^1.0.4",
     "@vueuse/nuxt": "^13.4.0",
     "eslint": "^9.0.0",
     "nuxt": "^4.0.0-alpha.4",
