--- a/package.json
+++ b/package.json
@@ -10,14 +10,25 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.22",
+    "@cloudflare/puppeteer": "^1.0.3",
     "@nuxt/eslint": "1.4.1",
+    "@nuxt/icon": "1.15.0",
+    "@nuxthub/core": "^0.9.0",
     "@nuxtjs/seo": "^3.1.0",
     "@nuxtjs/tailwindcss": "^7.0.0-beta.0",
     "@vite-pwa/nuxt": "^1.0.4",
     "@vueuse/nuxt": "^13.4.0",
+    "ai": "^4.3.16",
     "eslint": "^9.0.0",
-    "nuxt": "^4.0.0-alpha.4",
+    "nuxt": "4.0.0-alpha.2",
+    "puppeteer": "^24.11.2",
     "vue": "^3.5.17",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "zod": "^3.25.67"
+  },
+  "devDependencies": {
+    "@iconify-json/lucide": "^1.2.54",
+    "wrangler": "^4.22.0"
   }
 }
