--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxt/icon": "1.15.0",
     "@nuxtjs/seo": "^3.1.0",
     "@nuxtjs/tailwindcss": "^7.0.0-beta.0",
+    "@vercel/blob": "^1.1.1",
     "@vite-pwa/nuxt": "^1.0.4",
     "@vueuse/nuxt": "^13.4.0",
     "ai": "^4.3.16",
