--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
     "@cloudflare/puppeteer": "^1.0.3",
+    "@elevenlabs/elevenlabs-js": "^2.5.0",
     "@nuxt/eslint": "1.4.1",
     "@nuxt/icon": "1.15.0",
     "@nuxtjs/seo": "^3.1.0",
